# ChangeLog for net-proxy/haproxy
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-proxy/haproxy/ChangeLog,v 1.70 2012/10/29 20:09:46 jdhore Exp $

  29 Oct 2012; Jeff Horelick <jdhore@gentoo.org> haproxy-1.4.22.ebuild:
  marked x86 per bug 439544

  28 Oct 2012; Markos Chandras <hwoarang@gentoo.org> haproxy-1.4.22.ebuild:
  Stable on amd64 wrt bug #439544

  24 Oct 2012; Anthony G. Basile <blueness@gentoo.org> haproxy-1.4.22.ebuild:
  stable ppc, bug #439544

*haproxy-1.4.22 (30 Sep 2012)

  30 Sep 2012; Christian Ruppert <idl0r@gentoo.org> -haproxy-1.4.18-r1.ebuild,
  +haproxy-1.4.22.ebuild, +files/haproxy.initd-r2:
  Version bump to 1.4.22, bug 436686.

  08 Jun 2012; Brent Baude <ranger@gentoo.org> haproxy-1.4.21.ebuild:
  Marking haproxy-1.4.21 ppc for bug 417079

  22 May 2012; Agostino Sarubbo <ago@gentoo.org> haproxy-1.4.21.ebuild:
  Stable for amd64, wrt bug #417079

  22 May 2012; Johannes Huber <johu@gentoo.org> haproxy-1.4.21.ebuild:
  Stable for x86, wrt bug #417079

*haproxy-1.4.21 (22 May 2012)

  22 May 2012; Christian Ruppert <idl0r@gentoo.org> -haproxy-1.4.19.ebuild,
  -haproxy-1.4.20.ebuild, +haproxy-1.4.21.ebuild:
  Version bump, bug 417079 - SA49261.

*haproxy-1.4.20 (09 May 2012)

  09 May 2012; Christian Ruppert <idl0r@gentoo.org> -haproxy-1.4.15.ebuild,
  -haproxy-1.4.18.ebuild, +haproxy-1.4.20.ebuild, -files/haproxy.initd:
  Version bump + cleanup

  28 Feb 2012; Brent Baude <ranger@gentoo.org> haproxy-1.4.18-r1.ebuild:
  Marking haproxy-1.4.18-r1 ppc for bug 375111

*haproxy-1.4.19 (27 Feb 2012)

  27 Feb 2012; Christian Ruppert <idl0r@gentoo.org> -haproxy-1.3.25.ebuild,
  -haproxy-1.3.26.ebuild, -haproxy-1.3.26-r1.ebuild, +haproxy-1.4.19.ebuild:
  Version bump and cleanup

  04 Dec 2011; Markos Chandras <hwoarang@gentoo.org> haproxy-1.4.18-r1.ebuild:
  Stable on amd64 wrt bug #375111

  04 Dec 2011; Sven Wegener <swegener@gentoo.org> files/haproxy.initd,
  files/haproxy.initd-r1: